[package]
name = "gtlf-viewer-webgl"
version = "0.1.0"
edition = "2021"
authors = ["J Wylie Cullick <kulik.wylie@gmail.com>"]

[dependencies]
base64 = "0.13.0"
bitflags = "1.3.2"
collision = "0.20.1"
gltf = "1.0.0"
gloo-console = "0.2.1"
image = "0.24.3"
js-sys = "0.3.59"
mat4 = "0.2.1"
num-traits = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
cgmath = "0.18.0"
lazy_static = "1.4.0"
log = "0.4.17"
console_log = "0.2.0"
serde_json = "1.0.81"
reqwasm = "0.5.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'AngleInstancedArrays',
  'Blob',
  'BlobPropertyBag',
  'DedicatedWorkerGlobalScope',
  'Document',
  'Event',
  'EventTarget',
  'HtmlElement',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'Location',
  'MessageEvent',
  'MouseEventInit',
  'Url',
  'WebGlTransformFeedback',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'ExtDisjointTimerQuery',
  'Window',
  'Worker',
]

[toolchain]
channel = "nightly"